--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <p class="error">Oops! Something went wrong! Try reloading the page!</p>
     <div class="cat-info"></div>
 
-    <script src="cat-api.js" type="module"></script>
+    <script src="js/cat-api.js" type="module"></script>
     <script src="index.js" type="module"></script>
   </body>
 </html>
